src/objects/Claim_Impact_Report_Form__c.object
<CustomObject>
    <fields>
        <fullName>Remit_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Show Remit address</inlineHelpText>
        <label>Remit Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Claim_Impact_Report_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Level__c</fullName>
        <label>Report Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Logged Claims</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Repull</fullName>
                </value>
                <value>
                    <fullName>Rescrub</fullName>
                </value>
                <value>
                    <fullName>Repull/Rescrub</fullName>
                    <isActive>false</isActive>
                    <label>Repull/Rescrub</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor_s_Name_del__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requestor&apos;s Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Multiple codes must be separated with a comma with no spaces after the comma.</inlineHelpText>
        <label>Revenue Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a 4 digit Review Code or list of Review Codes separated by commas, no spaces.</inlineHelpText>
        <label>Review Code (COSMOS only)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rider__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rider</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Summary_Scrub_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Explain the identified project issue to include the resutls expected on the report.</inlineHelpText>
        <label>Root Cause Summary/Scrub Instructions</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scrub_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scrub Instructions</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Select_Statements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Select Statements</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Multiple types must be separated with a comma with no spaces after the comma.</inlineHelpText>
        <label>Service Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Provider_Panel_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter a 3 character Provider Panel Number or list of Provider Panel Numbers separated by commas, no spaces. COSMOS only</inlineHelpText>
        <label>Servicing Provider Panel Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Code_DIV_Cosmos_only__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Site Code/DIV - Cosmos only</label>
        <length>32500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PULSE</fullName>
                </value>
                <value>
                    <fullName>Cirrus</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                    <isActive>false</isActive>
                    <label>BOTH</label>
                </value>
                <value>
                    <fullName>COSMOS</fullName>
                    <isActive>false</isActive>
                    <label>COSMOS</label>
                </value>
                <value>
                    <fullName>UNET</fullName>
                    <isActive>false</isActive>
                    <label>UNET</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_of_Impact__c</fullName>
        <label>State of Impact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>(multiple ids must  be separated by a comma with no space after the comma) Max Limit - 400 ids (CSP) &amp; 200 ids (Cosmos)</inlineHelpText>
        <label>Subscriber ID</label>
        <length>32500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Suffix</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <formula>Project_Details__r.CPM_Name__r.Manager.FirstName + &apos; &apos; + Project_Details__r.CPM_Name__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIN_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a 5 character provider ID tax suffix number or a list of tax ID suffixes separated by commas, no spaces, and including leading zeros (i.e. 00001, 00002).</inlineHelpText>
        <label>TINs</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Reports_Requested__c</fullName>
        <label>Total Reports Requested</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transitioned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transitioned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Claim_Impact_Report_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Report__c</fullName>
        <label>Type of Report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adhoc Data Center</fullName>
                </value>
                <value>
                    <fullName>Cirrus Adhoc</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>Escort</fullName>
                </value>
                <value>
                    <fullName>Fee Schedule</fullName>
                </value>
                <value>
                    <fullName>Formdesk</fullName>
                </value>
                <value>
                    <fullName>Galaxy</fullName>
                </value>
                <value>
                    <fullName>JIRA</fullName>
                </value>
                <value>
                    <fullName>Logged Claims</fullName>
                </value>
                <value>
                    <fullName>Non-Standard: Numera</fullName>
                </value>
                <value>
                    <fullName>NQ</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Wilma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Multiple codes must be separated with a comma with no spaces after the comma.</inlineHelpText>
        <label>Value Codes</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Claim Impact Report Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPM-{00000000}</displayFormat>
        <label>Claim Impact Report Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Impact Report Forms</pluralLabel>
    <recordTypes>
        <fullName>C_S_CSP_Facest_COSMOS</fullName>
        <active>true</active>
        <description>This record type is used for C&amp;S CSP Facets/COSMOS form</description>
        <label>C&amp;S CSP Facets/COSMOS</label>
    </recordTypes>
    <recordTypes>
        <fullName>C_S_RV_Facets</fullName>
        <active>true</active>
        <description>This record type is used for C&amp;S RV Facets form.</description>
        <label>C&amp;S RV Facets</label>
    </recordTypes>
    <recordTypes>
        <fullName>E_I_UNET</fullName>
        <active>true</active>
        <description>This record type is used for E&amp;I UNET form.</description>
        <label>E&amp;I UNET</label>
    </recordTypes>
    <recordTypes>
        <fullName>MR_COSMOS</fullName>
        <active>true</active>
        <description>This record type is used for COSMOS form.</description>
        <label>M&amp;R COSMOS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Oxford</fullName>
        <active>true</active>
        <description>This record type is used for Oxford form.</description>
        <label>Oxford</label>
    </recordTypes>
    <recordTypes>
        <fullName>PHS_Legacy_NICE</fullName>
        <active>false</active>
        <description>This record type is used for PHS Legacy NICE form.</description>
        <label>PHS Legacy NICE</label>
    </recordTypes>
    <recordTypes>
        <fullName>UHC_West_NICE</fullName>
        <active>true</active>
        <description>This record type is used for UHC West - NICE</description>
        <label>UHC West - NICE</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_Creating_Multiple_Active_Form</fullName>
        <active>true</active>
        <description>This rule restricts creating multiple CPM Form with Open or Pending status.</description>
        <errorConditionFormula>AND(ISNEW(), Project_Details__r.Processing_Forms__c &gt; 0)</errorConditionFormula>
        <errorMessage>Users must not have more than one Claim Impact Report Form open at a time.</errorMessage>
    </validationRules>
</CustomObject>